refactored app to move table to be it's own component

--- a/package.json
+++ b/package.json
@@ -24,7 +24,8 @@
     "collectCoverageFrom": [
       "src/**/*.js",
       "!src/index.js",
-      "!src/setupTests.js"
+      "!src/setupTests.js",
+      "!src/ErrorBoundary/ErrorBoundary.js"
     ]
   }
 }
