--- a/package.json
+++ b/package.json
@@ -25,7 +25,7 @@
       "src/**/*.js",
       "!src/index.js",
       "!src/setupTests.js",
-      "!src/ErrorBoundary/ErrorBoundary.js",
+      "!src/ErrorBoundary/index.js",
       "!src/imgs/*"
     ]
   }
